# iiq-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-18-iiq-mcp-implementation.md
docs/superpowers/specs/: 2026-06-18-iiq-mcp-server-design.md
examples/: claude_desktop_config.json  opencode_config.json
src/iiq_mcp/: __init__.py  __main__.py  auth.py  errors.py
tests/: conftest.py  test_auth.py
